logs/Slang/generic/member/class_member_test_28.sv.log
name: class_member_test_28
description: Test
should_fail: 0
tags: 8.3
files: /home/travis/build/SymbiFlow/sv-tests/tests/generic/member/class_member_test_28.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generic/member/class_member_test_28.sv:7:1: error: language feature not yet supported
class myclass;
^~~~~~~~~~~~~~
